tests/fixtures/invalid/bool_bitxor_set.py
# Cannot bitwise XOR Bool and Set[int]
x: bool = True ^ {1, 2, 3}
